# GP-Image-Processing

./: .gitignore  AdversarialOp.cpp  AdversarialOp.h  CMakeLists.txt  ConvolutionParams.cpp  ConvolutionParams.h  Denoised.txt  GP Adversarial Example MNIST.vcxproj  GP Adversarial Example MNIST.vcxproj.filters  IP.h  ImageProcessingOp.cpp  ImageProcessingOp.h  LinearInterpolationEvalOp.cpp  Mnist.h  Net.h  Noised.txt  README.md  advImg10.txt  advimg.txt  advimg2.txt  conv-target.txt  info1.txt  log.txt  main.cpp  model1.cpp  model2.cpp  parameters.txt  results.txt  vgg.cpp
cartesian/: Abs.h  Add.h  Avg.h  Avg8.h  Cartesian.cpp  Cartesian.h  CartesianCrxHalfUniform.cpp  CartesianCrxHalfUniform.h  CartesianCrxOnePoint.cpp  CartesianCrxOnePoint.h  CartesianCrxUniform.cpp  CartesianCrxUniform.h  CartesianGene.h  Cartesian_genotype.h  Ceil.h  Cos.h  Div.h  Floor.h  Frac.h  Function.h  FunctionSet.cpp  FunctionSet.h  Ln.h  Max.h  Max8.h  Med8.h  Min.h  Min8.h  Mul.h  MutConnection.cpp  MutConnection.h  MutConnectionSilent.cpp  MutConnectionSilent.h  MutFunction.cpp  MutFunction.h  MutFunctionSilent.cpp  MutFunctionSilent.h  MutFunctionSwap.cpp  MutFunctionSwap.h  MutIntoSilent.cpp  (+12 more)
cartesian2/: Add.h  Cartesian.cpp  Cartesian.h  CartesianCrxHalfUniform.cpp  CartesianCrxHalfUniform.h  CartesianCrxOnePoint.cpp  CartesianCrxOnePoint.h  CartesianCrxTwoPoint.cpp  CartesianCrxTwoPoint.h  CartesianCrxUniform.cpp  CartesianCrxUniform.h  CartesianMutNewParameterLess.cpp  CartesianMutNewParameterLess.h  CartesianMutNonSilent.cpp  CartesianMutNonSilent.h  CartesianMutOnePoint.cpp  CartesianMutOnePoint.h  CartesianMutSilent.cpp  CartesianMutSilent.h  Cartesian_c.h  Cos.h  Div.h  Exp.h  Function.h  FunctionSet.cpp  FunctionSet.h  Mul.h  Nlog.h  Sin.h  Sqrt.h  Step.h  Sub.h
data/: blured-vert.txt  lenna-blured.txt  lenna-edges.txt  lenna-noised.txt  lenna.txt  noised.txt
models/: net1.pt  note.txt  vgg.pt
notes/: Notes.txt  info1.txt  info2.txt
python/: Blur.py  ConcatImage.py  Denoised.txt  Dilate.py  ECFParser.py  EdgeDetection.py  Gaussian.py  InPaiting.py  MnistImage.py  Noise.py  Noised.txt  Original.txt  (+6 more)
(+393 files in other folders)
